@@ -629,6 +629,9 @@ Bug Fixes
 * SOLR-8908: Fix to OnReconnect listener registration to allow listeners to deregister, such
   as when a core is reloaded or deleted to avoid a memory leak. (Timothy Potter)
 
+* SOLR-9007: Remove mention of the managed_schema_configs as valid config directory when creating
+  the collection for the SolrCloud example. (Timothy Potter)
+
 ======================= 5.5.0 =======================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
